Updates from validation with datateam

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                                         Below you will find an overview of the data objects in the database, as well as their attributes, descriptions of attributes (when available),
                                                         and requirement status. <br> <br>
                                                         In the header you can find tools to customize your view of the documentation such as "Advanced View" which will show you more technical
-                                                        specifications, along with the Table View, Grayscale Mode and Dark Mode. 
+                                                        specifications, along with the Table View, Grayscale Mode and Dark Mode.
                                                         </p>
                         </div>
                     </div>
@@ -178,7 +178,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">StatusCode</th>
-                                                            <td scope="row">Rehabilitering</td>
+                                                            <td scope="row">Rehabilitation.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -222,7 +222,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">DateTime</th>
-                                                            <td scope="row">Dato og tidspunkt for indlæggelse </td>
+                                                            <td scope="row">Date and time for admission.</td>
                                                             <td scope="row">datetime</td>
                                                             <td scope="row"></td>
                                                             <td scope="row">
@@ -262,7 +262,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">DiagnosisCode</th>
-                                                            <td scope="row">Final diagnosis verified by cardiologist at discharge</td>
+                                                            <td scope="row">Final diagnosis verified by cardiologist at discharge.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -310,7 +310,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">ResultValue</th>
-                                                            <td scope="row">Notice! Killip Class 1: no AcuteHeartFailure </td>
+                                                            <td scope="row">Killip class within 12 hours after hospitalization.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -352,7 +352,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">ResultValue</th>
-                                                            <td scope="row">CardiacArrest later than 12 hours after hospitalization </td>
+                                                            <td scope="row">Cardiac arrest later than 12 hours after hospitalization.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -393,7 +393,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">ResultValue</th>
-                                                            <td scope="row">CardiacArrest prehospital or within 12 hours after hospitalization </td>
+                                                            <td scope="row">Cardiac arrest prehospital or within 12 hours after hospitalization.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -433,7 +433,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">StatusCode</th>
-                                                            <td scope="row">Ekkokardiografi udført</td>
+                                                            <td scope="row">Echocardiography performed.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -473,7 +473,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">ResultValue</th>
-                                                            <td scope="row">CardiogenicShock later than 12 hours after hospitalization </td>
+                                                            <td scope="row">Cardiogenic shock later than 12 hours after hospitalization.</td>
                                                             <td scope="row">udfald (str)</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Udfald:</p>
@@ -514,7 +514,7 @@
                                                     <tbody class="table-group-divider">
                                                         <tr>
                                                             <th scope="row">ResultValue</th>
-                                                            <td scope="row">LVEF: Left ventricular ejection fraction </td>
+                                                            <td scope="row">LVEF: Left ventricular ejection fraction.</td>
                                                             <td scope="row">int</td>
                                                             <td scope="row">
                                                                 <p style="margin:0px; font-weight: bold;">Min</p>
