Add: Excel feature

--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
                                 </button>
                             </li>
                             <li class="nav-item ms-2">
+                                <a class="btn btn-info btn-sm" href="danaks_export_v1_0_0.xlsx">
+                                    <i class="bi bi-filetype-xlsx"></i>
+                                     Export XLSX
+                                </a>
+                            </li>
+                            <li class="nav-item ms-2">
                                 <button data-bs-toggle='modal' data-bs-target='#jsonModal' class="btn btn-info btn-sm">
                                     <i class="bi bi-filetype-json"></i>
                                      API Examples
@@ -208,9 +214,9 @@
                                                                 <td scope="row">
                                                                     <p style="margin:0px; font-weight: bold;">Udfald:</p>
                                                                     <ul class="list-group list-group-flush">
-                                                                        <li class="list-group-item">ja_patienten_accepterer </li>
+                                                                        <li class="list-group-item">ja_patienten_accepterer</li>
                                                                         <li class="list-group-item">ja_patienten_afslaar</li>
-                                                                        <li class="list-group-item">nej_ikke_relevant </li>
+                                                                        <li class="list-group-item">nej_ikke_relevant</li>
                                                                     </ul>
                                                                 </td>
                                                                 <td scope="row"></td>
@@ -580,7 +586,7 @@
                                             <a data-bs-toggle='collapse' aria-expanded='false' href="#Organization" class="ObjectHeaderWrapper">
                                                 <ol class="breadcrumb objectHeaderMain objectHeaderColor">
                                                     <i class="bi bi-folder2 me-2"></i>
-                                                    <li class="breadcrumb-item">root</li>
+                                                    <li class="breadcrumb-item">DANAKS</li>
                                                     <li class="breadcrumb-item">Report</li>
                                                     <li aria-current='page' class="breadcrumb-item active">Organization</li>
                                                     <span class="required ms-auto">* Required</span>
@@ -638,7 +644,7 @@
                                             <a data-bs-toggle='collapse' aria-expanded='false' href="#Patient" class="ObjectHeaderWrapper">
                                                 <ol class="breadcrumb objectHeaderMain objectHeaderColor">
                                                     <i class="bi bi-folder2 me-2"></i>
-                                                    <li class="breadcrumb-item">root</li>
+                                                    <li class="breadcrumb-item">DANAKS</li>
                                                     <li class="breadcrumb-item">Report</li>
                                                     <li aria-current='page' class="breadcrumb-item active">Patient</li>
                                                     <span class="required ms-auto">* Required</span>
