--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                             </a>
                         </li>
                         <li class="nav-item ms-3">
-                            <a class="btn btn-info btn-sm" href="https://rkkp-wsapi.test.tcs.trifork.cloud/redoc" id="redocs-link">
+                            <a class="btn btn-info btn-sm" href="https://wsapi-test.sundk.dk/redoc" id="redocs-link">
                                 <i class="bi bi-window-sidebar"></i>
                                  ReDocs
                             </a>
                         </li>
                         <li class="nav-item ms-3">
-                            <a class="btn btn-info btn-sm" href="https://rkkp-wsapi.test.tcs.trifork.cloud/docs" id="swagger-link">
+                            <a class="btn btn-info btn-sm" href="https://wsapi-test.sundk.dk/docs" id="swagger-link">
                                 <i class="bi bi-menu-button-wide"></i>
                                  Swagger UI
                             </a>
@@ -185,12 +185,6 @@
                                         <i class="bi bi-filetype-xlsx"></i>
                                          Eksporter (Excel)
                                     </a>
-                                </li>
-                                <li class="nav-item ms-2">
-                                    <button data-bs-toggle='modal' data-bs-target='#jsonModal' class="btn btn-info btn-sm">
-                                        <i class="bi bi-filetype-json"></i>
-                                         JSON Eksempel
-                                    </button>
                                 </li>
                             </ul>
                             <div class="tab-content">
@@ -815,8 +809,8 @@
    <a data-bs-toggle="collapse" aria-expanded="false" href="#Organization" class="ObjectHeaderWrapper collapsed">
       <ol class="breadcrumb objectHeaderMain objectHeaderColor">
          <i class="bi bi-folder2 me-2"></i>
-         <li class="breadcrumb-item">DAH</li>
          <li class="breadcrumb-item">DanAKS</li>
+         <li class="breadcrumb-item">Report</li>
          <li class="breadcrumb-item active">Organization</li>
          <li class="mx-2"> - </li>
          <li><strong>Organisation</strong></li>
@@ -934,8 +928,8 @@
    <a data-bs-toggle="collapse" aria-expanded="false" href="#Patient" class="ObjectHeaderWrapper collapsed">
       <ol class="breadcrumb objectHeaderMain objectHeaderColor">
          <i class="bi bi-folder2 me-2"></i>
-         <li class="breadcrumb-item">DAH</li>
          <li class="breadcrumb-item">DanAKS</li>
+         <li class="breadcrumb-item">Report</li>
          <li class="breadcrumb-item active">Patient</li>
          <li class="mx-2"> - </li>
          <li><strong>Patient</strong></li>
@@ -1004,143 +998,6 @@
                 </div>
             </div>
         </main>
-        <div class="modal modal-xl fade" id="jsonModal">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title fs-5" id="jsonModalLabel">API request struktur af DanAKS v1.0.0</h5>
-                        <button data-bs-dismiss='modal' type="button" class="btn-close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <div class="alert alert-tertiary border">
-                            <p>Dette er et auto-genereret eksempel af JSON strukturen til indberetning af data.</p>
-                            <hr />
-                            <p>For mere information om processen af at indsende data til API'en, se venligst vores tekniske guide                                         på www.rkkp.dk eller besøg <a href='https://rkkp-wsapi.test.tcs.trifork.cloud/docs' target='_blank'>Swagger UI</a>.                                         På <a href='https://rkkp-wsapi.test.tcs.trifork.cloud/docs' target='_blank'>Swagger UI</a> kan du finde en oversigt                                         over API endpoints, samt detaljerede beskrivelser af de tilgængelige API forespørgsler, som kan foretages til hvert endpoint. </p>
-                        </div>
-                        <ul class="nav nav-tabs" id="myTab" style="border-bottom: 0px !important">
-                            <li class="nav-item">
-                                <button class="nav-link active" id="postJSONTab" onclick="jsonTabs(this.id)">POST Example</button>
-                            </li>
-                            <li class="nav-item">
-                                <button class="nav-link" id="putJSONTab" onclick="jsonTabs(this.id)">PUT Example</button>
-                            </li>
-                        </ul>
-                        <div class="tab-content">
-                            <div class="" id="postJSONContent">
-                                <div class="form-floating mb-3">
-                                    <textarea class="form-control textarea-tabs bg-body-tertiary current_json" id="json_post_textarea" style="height: 1000px">{
-    "Report": {
-        "Patient": {
-            "CivilRegistrationNumber": "1104306Bz7"
-        },
-        "Organization": {
-            "OrganizationType": "regionskode",
-            "Identifier": "1234"
-        },
-        "Data": {
-            "Activity": {
-                "CardiacRehabPlan": {
-                    "StatusCode": "ja_patienten_accepterer"
-                }
-            },
-            "Contact": {
-                "AdmissionDate": {
-                    "DateTime": "23-12-1999 01:55:46"
-                }
-            },
-            "Diagnosis": {
-                "VerifiedDiagnosis": {
-                    "DiagnosisType": "di200"
-                }
-            },
-            "Observation": {
-                "AcuteHeartFailureKillipClass": {
-                    "ResultValue": "killip_klasse3"
-                },
-                "CardiacArrestAfter12h": {
-                    "ResultValue": "ja"
-                },
-                "CardiacArrestWithin12h": {
-                    "ResultValue": "ja"
-                },
-                "CardiacEcho": {
-                    "StatusCode": "ja"
-                },
-                "CardiogenicShockAfter12h": {
-                    "ResultValue": "ja"
-                },
-                "LVEF": {
-                    "ResultValue": 90
-                }
-            }
-        }
-    }
-}</textarea>
-                                    <label _for="floatingTextarea2">JSON POST Structure</label>
-                                </div>
-                            </div>
-                            <div class="hidden" id="putJSONContent">
-                                <div class="form-floating mb-3">
-                                    <textarea class="form-control textarea-tabs bg-body-tertiary" id="json_put_textarea" style="height: 1000px">{
-    "Report": {
-        "Patient": {
-            "CivilRegistrationNumber": "2903829098"
-        },
-        "Organization": {
-            "OrganizationType": "regionskode",
-            "Identifier": "1234"
-        },
-        "Data": {
-            "Activity": {
-                "CardiacRehabPlan": {
-                    "StatusCode": "ja_patienten_accepterer"
-                }
-            },
-            "Contact": {
-                "AdmissionDate": {
-                    "DateTime": "26-02-2012 19:41:23"
-                }
-            },
-            "Diagnosis": {
-                "VerifiedDiagnosis": {
-                    "DiagnosisType": "di214"
-                }
-            },
-            "Observation": {
-                "AcuteHeartFailureKillipClass": {
-                    "ResultValue": "killip_klasse4"
-                },
-                "CardiacArrestAfter12h": {
-                    "ResultValue": "nej"
-                },
-                "CardiacArrestWithin12h": {
-                    "ResultValue": "ja"
-                },
-                "CardiacEcho": {
-                    "StatusCode": "nej"
-                },
-                "CardiogenicShockAfter12h": {
-                    "ResultValue": "ikke_relevant"
-                },
-                "LVEF": {
-                    "ResultValue": 63
-                }
-            }
-        }
-    }
-}</textarea>
-                                    <label _for="floatingTextarea2">JSON PUT Structure</label>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="modal-footer">
-                        <button data-bs-dismiss='modal' type="button" class="btn btn-secondary btn-sm">Close Window</button>
-                        <button type="button" class="btn btn-primary btn-sm" id="copyJsonButton" onclick="copyText()">Copy JSON</button>
-                    </div>
-                </div>
-            </div>
-        </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" crossorgigin="anonymous"></script>
         <script src="js/rkkp.js" crossorgigin="anonymous"></script>
         <script>
