--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="container main-container-style bg-body-tertiary rounded-3 p-3 mb-3" style="border-top: 0px !important;border-top-left-radius: 0px !important;border-top-right-radius: 0px !important;">
                             <ul class="nav mb-2 d-flex justify-content-end">
                                 <li class="nav-item me-2">
-                                    <a class="btn btn-info btn-sm" href="danaks_export_v1_0_0.xlsx">
+                                    <a class="btn btn-info btn-sm" href="danaks_aks_v100_export.xlsx">
                                         <i class="bi bi-filetype-xlsx"></i>
                                          Eksporter (Excel)
                                     </a>
